(https://www.python.org/dev/peps/pep-0440/#semantic-versioning).


2.0.0 (unreleased)
------------------

- Object instantiation times are reduced by over 95%. Module import
  time has slightly increased, but is only one-off and should be offset
  by the gains after around 5 to 15 pydot objects. Object memory sizes
  are reduced by over 85%. (#242)

API:

API (minor change or few affected):
- `create_attribute_methods()`, which adds getter and setter methods
  for DOT attributes to a class, is moved out of class `Common` and
  works in two steps now: First pass it the set of attribute names and
  it will return a second function that can be called on the class. The
  two steps can be combined in a parameterized class decorator:
  `@create_attribute_methods(my_dot_attribute_set)`. (#242)
- `Dot.formats` changes from an instance attribute to a class
  attribute. (#242)


1.4.2 (2021-02-15)
------------------

Added:
- Documentation: Basic usage examples in `README.md`. (#141)

Changed:
- More detailed error message in case of Graphviz errors. (#239)
- More detailed warning message in case of failure to import the DOT
  parser module. (#241)

Deprecated:
- A future pydot 2.0.0 will drop support for Python 2, 3.4 and
  possibly other Python versions that are end-of-life at that time.
  Pydot does not emit any deprecation warnings about this. Further
  pydot 1.x.x releases are currently not foreseen, but if there are
  any, should still support the mentioned Python versions. (#229)

Fixed:
- On Python 2, non-equality comparison (`!=`) between two separate, but
  equal `Edge` instances will now correctly return `False`, as it
  already did on Python 3. (#248)
- Prevent `TypeError` in handling of DOT parser error. (#176)
- Prevent `TypeError` in `graph_from_adjacency_matrix()` and
  `graph_from_incidence_matrix()`. (#98)
- Prevent `TypeError` when creating an edge with a `Subgraph` or
  `Cluster` object (as opposed to name string) as an edge point. (#89)