@@ -13,6 +13,16 @@ Pydot versions since 1.4.2 adhere to [PEP 440-style semantic versioning]
   are reduced by over 85%. (#242)
 
 API:
+- Improved serialization support for tools like pickle. After pickling
+  and unpickling, the new object will better resemble the original:
+  - The entire instance's dictionary is now serialized, not only its
+    `obj_dict` attribute.
+  - Unpickled objects are no longer missing the convenience methods for
+    DOT attributes (`get_'name'()`, `set_'name'()`) and output formats
+    (`create_'format'()` and `write_'format'`). (They are not
+    serialized, but bound to the class now instead of to the instance.)
+  Note: Currently, serialized object representations created using
+  pydot 1.x are not compatible with pydot 2.x and vice versa. (#242)
 
 API (minor change or few affected):
 - `create_attribute_methods()`, which adds getter and setter methods
